--- a/assets/css/color/color-four.css
+++ b/assets/css/color/color-four.css
@@ -22,7 +22,7 @@
 .site-main ~ .load-more-btn-area.style-one .load-more-btn:hover,
 .tb-subscribe-widget .subscribe-form #mc-form #subscribe-btn,
 .tb-signup-widget .signup-form .btn-default:hover {
-    background-color: #000000;
+    background-color: #FF4D4D;
 }
 
 .paging-navigation.style-one .nav-links > li.active > a, 
