--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8216,7 +8216,7 @@ body.sidemenu-active #pp-nav.right {
   transition: all 0.2s;
 }
 .entry-meta-content a:hover, .entry-meta-content a:focus {
-  color: #341d1d;
+  color: #c5305c;
 }
 
 .entry-category > a {
